--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -136,7 +136,8 @@ Middleware grants you access to user authentication state throughout your applic
     matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
   };
   ```
-3. By default, `clerkMiddleware()` will not protect any routes. All routes are public and you must opt-in to protection for routes. See the [`clerkMiddleware()` docs](https://github.com/docs/references/nextjs/clerk-middleware) to learn how to require authentication for specific routes.
+3. By default, `clerkMiddleware()` will not protect any routes. All routes are public and you must opt-in to protection for routes. See the [`clerkMiddleware()` docs](/docs/references/nextjs/clerk-middleware) to learn how to require authentication for specific routes.
+
 
 ### Create a header with Clerk components
 
