--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -190,8 +190,7 @@ Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) whi
 
 ## Next steps
 
-- Learn how to use Clerk's hooks and helpers to access the active user and session data.
-<br/>[Read the guide &raquo;](/docs/references/nextjs/read-session-data)
+- [Learn how to use Clerk's hooks and helpers to access the active user and session data](/docs/references/nextjs/read-session-data)
 
 - Learn how to add your own sign-up and sign-in pages with Clerk components
 <br/>[Read the guide &raquo;](/docs/references/nextjs/custom-signup-signin-pages)
