--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -123,7 +123,7 @@ Select your preferred router below to learn how to make this data available acro
 
 ### Add Middleware to your application
 
-Middleware grants you access to user authentication state throughout your application, on any route or page. With `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default. Please see the [`clerkMiddleware()` reference](/docs/references/nextjs/clerk-middleware) and the [Route Protection guide](/docs/references/nextjs/route-protection) for information on protecting routes.
+Middleware grants you access to user authentication state throughout your application, on any route or page. While `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default. Please see the [`clerkMiddleware()` reference](/docs/references/nextjs/clerk-middleware) and the [Route Protection guide](/docs/references/nextjs/route-protection) for information on protecting routes.
 
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
 2. In your middleware.ts, export Clerk's `clerkMiddleware()` helper:
@@ -191,7 +191,6 @@ Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) whi
 ## Next steps
 
 - [Learn how to use Clerk's hooks and helpers to access the active user and session data](/docs/references/nextjs/read-session-data)
-
 - [Learn how to add your own sign-up and sign-in pages with Clerk components](/docs/references/nextjs/custom-signup-signin-pages)
 
 ## More resources
