--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -50,7 +50,7 @@ pnpm add @clerk/nextjs@beta
 
 ### Set your environment keys
 
-1. If you don't have a `.env.local` file in the root directory of your Next.js project, create one now.
+1. If you don't have an `.env.local` file in the root directory of your Next.js project, create one now.
 2. Find your publishable key and secret key. If you're signed into Clerk, the `.env.local` snippet below will contain your keys. Otherwise:
   - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
   - Select your application, then select **🔑 API Keys** in the sidebar menu.
@@ -123,7 +123,7 @@ Select your preferred router below to learn how to make this data available acro
 
 ### Add Middleware to your application
 
-Middleware grants you access to user authentication state throughout your application, on any route or page. While `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default. Please see the [`clerkMiddleware()` reference](/docs/references/nextjs/clerk-middleware) and the [Route Protection guide](/docs/references/nextjs/route-protection) for information on protecting routes.
+`clerkMiddleware()` grants you access to user authentication state throughout your application, on any route or page. It also allows you to protect specific routes from unauthenticated users. To add `clerkMiddleware()` to your application, follow these steps:
 
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
 2. In your middleware.ts, export Clerk's `clerkMiddleware()` helper:
@@ -136,8 +136,7 @@ Middleware grants you access to user authentication state throughout your applic
     matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
   };
   ```
-3. By default, `clerkMiddleware()` will not protect any routes. All routes are public and you must opt-in to protection for routes. See the [`clerkMiddleware()` docs](/docs/references/nextjs/clerk-middleware) to learn how to require authentication for specific routes.
-
+3. By default, `clerkMiddleware()` will not protect any routes. All routes are public and you must opt-in to protection for routes. See the [`clerkMiddleware()` reference](/docs/references/nextjs/clerk-middleware) to learn how to require authentication for specific routes.
 
 ### Create a header with Clerk components
 
