(/quickstarts/nextjs): update middleware instructions to favor src/ directory

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -105,7 +105,7 @@ Select your preferred router below to learn how to make this data available acro
     If you are not using `src`, the `_app.tsx` file will be in your root folder.
   </Callout>
 
-  ```tsx filename="/src/pages/_app.tsx" {2,6-8}
+  ```tsx filename="src/pages/_app.tsx" {2,6-8}
     import '@/styles/globals.css'
     import { ClerkProvider } from "@clerk/nextjs/server";
     import type { AppProps } from "next/app";
@@ -125,9 +125,9 @@ Select your preferred router below to learn how to make this data available acro
 
 `clerkMiddleware()` grants you access to user authentication state throughout your application, on any route or page. It also allows you to protect specific routes from unauthenticated users. To add `clerkMiddleware()` to your application, follow these steps:
 
-1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
+1. Create a `src/middleware.ts` file. If your application does not use the `src/` directory, your `middleware.ts` file should be placed inside the root directory alongside `.env.local`.
 2. In your middleware.ts, export Clerk's `clerkMiddleware()` helper:
-  ```tsx filename="/src/middleware.ts"
+  ```tsx filename="src/middleware.ts"
   import { clerkMiddleware } from "@clerk/nextjs/server";
 
   export default clerkMiddleware();
