update protect docs

--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -17,10 +17,10 @@ Both [`auth()`](/docs/references/nextjs/auth) and  [`getAuth()`](/docs/reference
 | `orgRole` | <code>[OrganizationCustomRoleKey](#organization-custom-role-key) \| undefined</code> | The current user's active organization role. |
 | `orgSlug` | `string \|undefined` | The current user's active organization slug. |
 | `orgPermissions` | <code>[OrganizationCustomPermissionKey[]](#organization-custom-role-key) \| undefined</code> | The current user's active organization permissions. |
-| [`has`](#has) | <code>(isAuthorizedParams: [CheckAuthorizationParamsWithCustomPermissions](#check-authorization-params-with-custom-permissions)) => boolean</code> | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization. |
-| [`getToken`](#get-token) | [`ServerGetToken`](#server-get-token) | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. |
-| `claims` | `JwtPayload` | The current user's [session claims](/docs/backend-requests/resources/session-tokens#default-session-claims). |
+| `sessionClaims` | `JwtPayload` | The current user's [session claims](/docs/backend-requests/resources/session-tokens#default-session-claims). |
 | `actor` | `ActClaim \| undefined` | Holds identifier for the user that is impersonating the current user. |
+| [`has()`](#has) | <code>(isAuthorizedParams: [CheckAuthorizationParamsWithCustomPermissions](#check-authorization-params-with-custom-permissions)) => boolean</code> | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization. |
+| [`getToken()`](#get-token) | [`ServerGetToken`](#server-get-token) | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. |
 | `debug` | `AuthObjectDebug` | Used to help debug issues when using Clerk in development. |
 
 ### `OrganizationCustomRoleKey`
@@ -62,7 +62,7 @@ function has(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) 
 
 #### `has()` example
 
-You can use `has()` to check if a user is authorized to access a component. 
+You can use `has()` to check if a user is authorized to access a component.
 
 In the following example:
 - `has()` is used to check if the user has the `org:team_settings:manage` permission.
@@ -76,7 +76,7 @@ export default async function Page() {
 
   const canManage = has({ permission:"org:team_settings:manage" });
 
-  if(!canManage) return null;  
+  if(!canManage) return null;
 
   return <h1>Team Settings</h1>
 }
@@ -112,7 +112,7 @@ The following is an example of the `Authentication` object without an active org
   orgRole: null,
   orgSlug: null,
   orgPermissions: null,
-  has: [Function (anonymous)], 
+  has: [Function (anonymous)],
   getToken: [AsyncFunction (anonymous)],
   claims: {
     azp: 'http://localhost:3000',
@@ -138,7 +138,7 @@ The following is an example of the `Authentication` object with an active organi
   orgRole: 'org:admin',
   orgSlug: undefined,
   orgPermissions: ['org:team_settings:manage'], // Custom permissions
-  has: [Function (anonymous)], 
+  has: [Function (anonymous)],
   getToken: [AsyncFunction (anonymous)],
   claims: {
     azp: 'http://localhost:3000',
