--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -19,8 +19,8 @@ description: Add authentication and user management to your Next.js app with Cle
 
 - Install `@clerk/nextjs`
 - Set up your environment keys to test your app locally
-- Protect your Next.js app's content with Clerk
-- Use Next.js middleware to implement route-specific authentication
+- Add `<ClerkProvider />` to your application
+- Use Clerk middleware to implement route-specific authentication
 - Create a header with Clerk components for users to sign in and out
 
 </TutorialHero>
@@ -183,7 +183,7 @@ export default function Page() {
 ```
 </CodeBlockTabs>
 
-Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) while signed out or signed in to see `<SignInButton />` or `<UserButton />` in action.
+Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) while signed out to see the sign-in button. Once signed in, your app will render the user button.
 
 </Steps>
 
