add missing example for how to use the useOrganizationList hook

--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -95,7 +95,33 @@ type OrganizationSuggestionStatus = "pending" | "accepted";
 
 ## How to use the `useOrganizationList()` hook
 
+### Expanding and paginating attributes
+
 To keep network usage to a minimum, developers are required to opt-in by specifying which resource they need to fetch and paginate through. So by default, the `userMemberships`, `userInvitations`, and `userSuggestions` attributes are not populated. You must pass `true` or an object with the desired [properties](#shared-properties) to fetch and paginate the data.
+
+```jsx
+const { userMemberships } = useOrganizationList(); // userMemberships.data will never be populated.
+
+// Use default values to fetch userMemberships, such as initialPage = 1 and pageSize = 10
+const { userMemberships } = useOrganizationList({
+  userMemberships: true
+});
+
+// Pass your own values to fetch userMemberships
+const { userMemberships } = useOrganizationList({
+  userMemberships: {
+    pageSize: 20,
+    initialPage: 2, // skips the first page
+  }
+});
+
+// Aggregate pages in order to render an infinite list
+const { userMemberships } = useOrganizationList({
+  userMemberships: {
+    infinite: true,
+  }
+});
+```
 
 ### Infinite pagination
 
