--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -5,7 +5,7 @@ description: Clerk's useOrganization() hook retrieves attributes of the currentl
 
 # `useOrganization()`
 
-The `useOrganization()` hook is used to retrieve attributes of the currently active organization. 
+The `useOrganization()` hook is used to retrieve attributes of the currently active organization.
 
 ## `useOrganization()` parameters
 
@@ -99,12 +99,12 @@ To keep network usage to a minimum, developers are required to opt-in by specify
 ```jsx
 const { invitations } = useOrganization(); // invitations.data will never be populated.
 
-// Use default values to fetch invitations
+// Use default values to fetch invitations, such as initialPage = 1 and pageSize = 10
 const { invitations } = useOrganization({
   invitations: true
 });
 
-// Override fetch invitations
+// Pass your own values to fetch invitations
 const { invitations } = useOrganization({
   invitations: {
     pageSize: 20,
