(core1) DOCS-5394 Update React references (#715)
Co-authored-by: Shaquil Hansford <liuqahs15@gmail.com>

--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -31,7 +31,7 @@ This guide will be written for Next.js applications using App Router, but the sa
 
 ### Hide Personal Accounts from UI components
 
-To begin forcing organizations in your application, you need to remove a user's Personal Account from the UI. A user's Personal Account cannot be disabled; it can only be hidden. 
+To begin forcing organizations in your application, you need to remove a user's Personal Account from the UI. A user's Personal Account cannot be disabled; it can only be hidden.
 
 If you have an application set up to use organizations, you might have the [`<OrganizationList />`](/docs/components/organization/organization-list) and [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) components in your application. These components will show a user's Personal Account by default, but you can hide it by passing the `hidePersonal` prop.
 
@@ -67,7 +67,7 @@ If you have an application set up to use organizations, you might have the [`<Or
 
 ### Detect and set an active organization
 
-With Clerk, a user can have many organization memberships, but only one of them can be active at a time. 
+With Clerk, a user can have many organization memberships, but only one of them can be active at a time.
 
 #### Detect an active organization
 
@@ -93,7 +93,7 @@ A session will always include an `orgId` via the [`Authentication` object](/docs
   <Tab>
 
     The [`useAuth()`](/docs/references/react/use-auth) hook can be used to get the `orgId` from the session *client-side*. If the `orgId` is `null`, then the user does not have an active organization.
-  
+
     ```tsx
     "use client"
     import { useAuth } from '@clerk/nextjs'
@@ -110,7 +110,7 @@ A session will always include an `orgId` via the [`Authentication` object](/docs
 
 #### Set an active organization
 
-In the case of [Clerk components](/docs/components/overview), an organization will *automatically* be set as active each time the user creates an organization, accepts an invitation, or selects a membership from the organization switcher. In the case of custom flows, you will need to provide the logic for setting an organization as active. Don't worry, Clerk's [`useOrganizationList`](/docs/references/react/use-organization-list) hook provides a `setActive` method to help you with this.
+In the case of [Clerk components](/docs/components/overview), an organization will *automatically* be set as active each time the user creates an organization, accepts an invitation, or selects a membership from the organization switcher. In the case of custom flows, you will need to implement the logic for setting an organization as active. Clerk's [`useOrganizationList()`](/docs/references/react/use-organization-list) hook provides a `setActive` method to help you with this.
 
 In the example below, a custom organization switcher is created. It allows a user to select an organization from a list of their memberships. The `useOrganizationList()` hook is used to fetch a list of the user's memberships, and the `setActive` method is used to set the selected organization as active.
 
@@ -122,18 +122,18 @@ In the example below, a custom organization switcher is created. It allows a use
 "use client"
 
 import { useOrganizationList } from "@clerk/nextjs";
- 
+
 export const CustomOrgSwitcher = () => {
   const { isLoaded, setActive, userMemberships } = useOrganizationList({
     userMemberships: {
       infinite: true,
     },
   });
- 
+
   if (!isLoaded) {
     return <>Loading</>;
   }
- 
+
   return (
     <>
       <ul>
@@ -148,7 +148,7 @@ export const CustomOrgSwitcher = () => {
           </li>
         ))}
       </ul>
- 
+
       <button
         disabled={!userMemberships.hasNextPage}
         onClick={() => userMemberships.fetchNext()}
@@ -239,7 +239,7 @@ Based on your use case, you can decide to limit users either in the entire app o
 
 #### Limit access using the `authMiddleware` helper
 
-Clerk's `authMiddleware` helper can be used in both App Router and Pages Router applications to limit access to users with active organizations only. 
+Clerk's `authMiddleware` helper can be used in both App Router and Pages Router applications to limit access to users with active organizations only.
 
 To limit access to the entire application, your middleware can be configured as follows:
 
@@ -276,15 +276,15 @@ To limit access to a specific part of the application, you can check if the path
       if(
         auth.userId &&
         !auth.orgId &&
-        req.nextUrl.pathname.startsWith('/dashboard') && 
+        req.nextUrl.pathname.startsWith('/dashboard') &&
         req.nextUrl.pathname !== "/dashboard/org-selection"
         ){
       const searchParams = new URLSearchParams({
         redirectUrl: req.url
       })
- 
+
       const orgSelection = new URL(`/dashboard/org-selection?${searchParams.toString()}`, req.url);
- 
+
       return NextResponse.redirect(orgSelection)
       }
       ...
@@ -325,7 +325,7 @@ Now that you have configured your middleware to redirect users to the `/org-sele
     }
     ```
   </Tab>
-  
+
   <Tab>
     ```tsx filename="pages/org-selection.tsx"
     import { OrganizationList } from "@clerk/nextjs"
