--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -1,111 +1,53 @@
 ---
 title: useAuth()
-description: The useAuth() hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
+description: Clerk's useAuth() hook is a convenient way to access the current auth state.
 ---
 
 # `useAuth()`
 
 The `useAuth()` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-## Usage
+## `useAuth()` returns
 
-<Tabs type="framework" items={["Next.js", "React"]}>
-  <Tab>
-    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```tsx filename="/app/pageWithData/clientComponent.tsx"
-      "use client";
+| Name | Type | Description |
+| --- | --- | --- |
+| `isSignedIn` | `boolean` | A boolean that returns true if the user is signed in. |
+| `isLoaded` | `boolean` | A boolean that until Clerk loads and initializes, will be set to `false`. Once Clerk loads, `isLoaded` will be set to `true`. |
+| `userId` | `string` | The current user's ID. |
+| `sessionId` | `string` | The current user's session ID. |
+| `orgId` | `string` | The current user's active organization ID. |
+| `orgRole` | `string` | The current user's active organization role. |
+| `orgSlug` | `string` | The current user's organization slug. |
+| `signOut()` | `(options?: SignOutOptions) => Promise<void>` | A function that signs the user out. See the [reference documentation](/docs/references/javascript/clerk/clerk#sign-out) for more information. |
+| `getToken()` | `(options?: GetTokenOptions) => Promise\<string \| null\>` | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. See the [reference documentation](/docs/references/javascript/session#get-token) for more information. |
+| `has()` | `(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) => boolean` | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization. See the [reference documentation](https://clerk.com/docs/references/nextjs/authentication-object#has) for more information. |
 
-      import * as React from "react";
-      import { useAuth } from "@clerk/nextjs";
+## How to use the `useAuth()` hook
 
-      export default function ExternalDataPage() {
-        const [data, setData] = React.useState<object>({});
-        const { getToken, isLoaded, isSignedIn } = useAuth();
-        
-        // In this case, /api/example is a Next.js Route Handler
-        const fetchData = async () => {
-          fetch("/api/example", {
-            headers: { Authorization: `Bearer ${await getToken()}` },
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              console.log("data", data);
-              setData(data);
-            });
-          return;
-        };
+The following example demonstrates how to use the `useAuth()` hook to access the current auth state, like whether the user is signed in or not. It also demonstrates a basic example of how you could use the `getToken()` method to retrieve a session token for fetching data from an external resource.
 
-        React.useEffect(() => {
-          if (!isLoaded || !isSignedIn) {
-            // You can handle the loading or signed state separately
-          }
-          
-          fetchData();
-        }, []);
+```tsx filename="external-data-page.tsx"
+import { useAuth } from '@clerk/clerk-react';
 
-        return <pre>{JSON.stringify(data, null, 2)}</pre>;
-      }
-      ```
+export default function ExternalDataPage() {
+  const { getToken, isLoaded, isSignedIn } = useAuth();
 
-      ```tsx filename="pages/index.tsx"
-      import { useAuth } from '@clerk/nextjs';
+  if (!isLoaded) {
+    // Handle loading state however you like
+    return <div>Loading...</div>;
+  }
 
-      export default function ExternalDataPage() {
-        const { getToken, isLoaded, isSignedIn } = useAuth();
+  if (!isSignedIn) {
+    // Handle signed out state however you like
+    return <div>Sign in to view this page</div>;
+  }
 
-        if (!isLoaded || !isSignedIn) {
-          // You can handle the loading or signed state separately
-          return null;
-        }
+  const fetchDataFromExternalResource = async () => {
+    const token = await getToken();
+    // Add logic to fetch your data
+    return data;
+  }
 
-        const fetchDataFromExternalResource = async () => {
-          const token = await getToken();
-          // fetch your data
-          return data;
-        };
-
-        return <div>...</div>;
-      }
-      ```
-    </CodeBlockTabs>
-  </Tab>
-
-  <Tab>
-      ```tsx filename="external-data-page.tsx"
-      import { useAuth } from '@clerk/clerk-react';
-
-      export default function ExternalDataPage() {
-        const { getToken, isLoaded, isSignedIn } = useAuth();
-
-        if (!isLoaded || !isSignedIn) {
-          // You can handle the loading or signed state separately
-          return null;
-        }
-
-        const fetchDataFromExternalResource = async () => {
-          const token = await getToken();
-          // fetch your data
-          return data;
-        }
-
-        return <div>...</div>;
-      }
-      ```
-  </Tab>
-</Tabs>
-
-## Returns
-
-| Variables | Description |
-| --- | --- |
-| `isSignedIn` | A boolean that returns true if the user is signed in. |
-| `isLoaded` | A boolean that until Clerk loads and initializes, will be set to `false`. Once Clerk loads, `isLoaded` will be set to `true`. |
-| `userId` | The current user's ID. |
-| `sessionId` | The current user's session ID. |
-| `signOut` | A function that signs the user out. |
-| `getToken` | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. |
-| `has` | A function that returns a boolean based on the [permission or role](/docs/organizations/roles-permissions) provided as parameter. Can be used for authorization. |
-| `orgId` | The current user's active organization ID. |
-| `orgRole` | The current user's active organization role. |
-| `orgPermissions` | The current user's active organization Permissions. |
-| `orgSlug` | The current user's organization slug. |
+  return <div>...</div>;
+}
+```
