--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -1,39 +1,23 @@
 ---
 title: useSession()
-description: The useSession() hook provides access to the the current user Session object, and helpers to set the active session.
+description: Clerk's useSession() hook provides access to the the current user Session object, as well as helpers to set the active session.
 ---
 
 # `useSession()`
 
 The `useSession()` hook provides access to the current user's [`Session`](/docs/references/javascript/session) object, as well as helpers for setting the active session.
 
-## Usage
+## `useSession()` returns
 
-<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
-```tsx filename="pages/index.tsx"
-import { useSession } from "@clerk/nextjs";
+| Name | Type | Description |
+| --- | --- | --- |
+| `isLoaded` | `boolean` | A boolean that is set to `false` until Clerk loads and initializes. |
+| `isSignedIn` | `boolean` | A boolean that is set to `true` if the user is signed in. |
+| `session` | [`Session`](/docs/references/javascript/session) | Holds the current active session for the user. |
 
-export default function Home() {
-  const { isLoaded, session, isSignedIn } = useSession();
+## How to use the `useSession()` hook
 
-  if (!isLoaded) {
-    // handle loading state
-    return null;
-  }
-  if(!isSignedIn) {
-    // handle not signed in state
-    return null;
-  }
-
-  return (
-    <div>
-      <p>This session has been active
-      since {session.lastActiveAt.toLocaleString()}
-      </p>
-    </div>
-  )
-}
-```
+The following example demonstrates how to use the `useSession()` hook to access the `SignIn` object, which has the `lastActiveAt` property on it. The `lastActiveAt` property is used to display the last active time of the current session to the user.
 
 ```tsx filename="home.tsx"
 import { useSession } from "@clerk/clerk-react";
@@ -42,11 +26,11 @@ export default function Home() {
   const { isLoaded, session, isSignedIn } = useSession();
 
   if (!isLoaded) {
-    // handle loading state
+    // Add logic to handle loading state
     return null;
   }
   if(!isSignedIn) {
-    // handle not signed in state
+    // Add logic to handle not signed in state
     return null;
   }
 
@@ -59,11 +43,3 @@ export default function Home() {
   )
 }
 ```
-</CodeBlockTabs>
-
-| Values | Description |
-| --- | --- |
-| `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. |
-| `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
-| `session` | Holds the current active session for the user. |
