--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -94,7 +94,7 @@ export async function GET() {
 In the following example,
 - the `protect()` helper is used to check if a user visiting any `/dashboard` route is authenticated.
 - If the user is not authenticated, they will be redirected to the sign-in route.
-- If the user is authenticated, they can view the route and its children.
+- If the user is authenticated, they can view any `/dashboard` route and its children.
 
 ```tsx filename="app/dashboard/layout.tsx"
 import { auth } from '@clerk/nextjs/server'
