fix middleware example for satellite domains

--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -110,12 +110,20 @@ The `URL` mentioned above is the request url for server side usage or the curren
       createRouteMatcher
     } from "@clerk/nextjs/server"
 
+    // Set the homepage as a public route
     const isPublicRoute = createRouteMatcher(["/"])
 
+    // Set the necessary options for a satellite application
+    const options = {
+      isSatellite: true,
+      signInUrl: 'https://primary.dev/sign-in',
+      domain: 'https://primary.dev',
+    };
+
     export default clerkMiddleware((auth, req) => {
-      if (isPublicRoute(req)) return // if it's a public route, do nothing
-      auth().protect() // for any other route, require auth
-    })
+      if (isPublicRoute(req)) return; // if it's a public route, do nothing
+      auth().protect(); // for any other route, require auth
+    }, options);
 
     export const config = {
       matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
