Code Example Fix Made it a strictly equals, which is a JS/TS best practice. I couldn't find any other loosely equals in the docs.

--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -96,7 +96,7 @@ export default function Home() {
     const updateMetadata = await fetch("/api/updateMetadata");
 
     // Check if the update was successful
-    if (!updateMeta.message == "success") {
+    if (!updateMeta.message === "success") {
       throw new Error("Error updating");
     }
 
