remove jsx/tsx from file extensions

--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -59,10 +59,10 @@ Now that you have added the custom claims to your session token, you can use the
 #### Using `getAuth` in your Next.js application
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
 import { NextResponse } from 'next/server';
- 
+
 export default function Page() {
   const { sessionClaims } = auth();
 
