--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -19,15 +19,15 @@ The `<CreateOrganization />` component is used to render an organization creatio
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```jsx filename="/app/create-organization/[[...create-organization]]/page.[jsx/tsx]"
+      ```jsx filename="/app/create-organization/[[...create-organization]]/page.tsx"
       import { CreateOrganization } from "@clerk/nextjs";
 
       export default function CreateOrganizationPage() {
         return <CreateOrganization />;
       }
       ```
-      
-      ```jsx filename="/pages/create-organization/[[...index]].[jsx/tsx]"
+
+      ```jsx filename="/pages/create-organization/[[...index]].tsx"
       import { CreateOrganization } from "@clerk/nextjs";
 
       export default function CreateOrganizationPage() {
