--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -19,9 +19,9 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     You can embed the `<OrganizationProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
-  
+
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.[jsx/tsx]"
+      ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
       import { OrganizationProfile } from "@clerk/nextjs";
 
       export default function OrganizationProfilePage() {
@@ -31,7 +31,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
       }
       ```
 
-      ```jsx filename="/pages/organization-profile/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/organization-profile/[[...index]].tsx"
       import { OrganizationProfile } from "@clerk/nextjs";
 
       export default function OrganizationProfilePage() {
