--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -19,7 +19,7 @@ The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable th
 <Tabs items={["Next.js", "React", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```jsx filename="/app/organization-switcher/[[...organization-switcher]]/page.[jsx/tsx]"
+      ```jsx filename="/app/organization-switcher/[[...organization-switcher]]/page.tsx"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
       export default function OrganizationSwitcherPage() {
@@ -31,7 +31,7 @@ The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable th
       }
       ```
 
-      ```jsx filename="/pages/organization-switcher/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/organization-switcher/[[...index]].tsx"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
       export default function OrganizationSwitcherPage() {
