--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -18,7 +18,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```jsx filename="layout.[jsx/tsx]"
+      ```jsx filename="layout.tsx"
       import {
         ClerkProvider,
         SignedIn,
@@ -55,7 +55,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
       }
       ```
 
-      ```jsx filename="userButtonExample.[jsx/tsx]"
+      ```jsx filename="userButtonExample.tsx"
       import {
         ClerkProvider,
         SignedIn,
