--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -25,7 +25,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
     <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out the [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
 
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```jsx filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
+      ```jsx filename="/app/sign-up/[[...sign-up]]/page.tsx"
       import { SignUp } from "@clerk/nextjs";
 
       export default function Page() {
@@ -33,7 +33,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
       }
       ```
 
-      ```jsx filename="/pages/sign-up/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/sign-up/[[...index]].tsx"
       import { SignUp } from "@clerk/nextjs";
 
       const SignUpPage = () => (
