--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -19,7 +19,7 @@ The `<OrganizationList />` component is used to display organization related mem
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```jsx copy filename="/app/discover/page.[jsx/tsx]"
+    ```jsx copy filename="/app/discover/page.tsx"
     import { OrganizationList } from "@clerk/nextjs";
 
     export default function OrganizationListPage() {
@@ -33,7 +33,7 @@ The `<OrganizationList />` component is used to display organization related mem
     }
     ```
 
-    ```jsx copy filename="/pages/discover.[jsx/tsx]"
+    ```jsx copy filename="/pages/discover.tsx"
     import { OrganizationList } from "@clerk/nextjs";
 
     export default function OrganizationListPage() {
