--- a/docs/references/nextjs/server-actions.mdx
+++ b/docs/references/nextjs/server-actions.mdx
@@ -43,7 +43,7 @@ export default function AddToCart() {
 
 Current user data is important for data enrichment. You can use the [`currentUser()`](/docs/references/nextjs/current-user) helper to achieve this.
 
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/page.tsx"
 import { currentUser } from '@clerk/nextjs';
 
 export default function AddHobby() {
@@ -102,7 +102,7 @@ export async function addItem(formData: FormData) {
 
 #### Server page
 
-```tsx filename="page.[jsx/tsx]"
+```tsx filename="page.tsx"
 import UI from "./UI";
 import { addItem } from "./actions"
 export default function Hobby() {
@@ -114,7 +114,7 @@ export default function Hobby() {
 
 #### Client Component
 
-```tsx filename="ui.[jsx/tsx]"
+```tsx filename="ui.tsx"
 "use client"
 
 export default function UI({ addItem }) {
@@ -158,7 +158,7 @@ export async function addHobby(formData: FormData) {
 
 #### Server Page
 
-```tsx filename="page.[jsx/tsx]"
+```tsx filename="page.tsx"
 import UI from "./ui";
 import { addHobby } from "./actions"
 export default function Hobby() {
@@ -170,7 +170,7 @@ export default function Hobby() {
 
 #### Client Component
 
-```tsx filename="ui.[jsx/tsx]"
+```tsx filename="ui.tsx"
 "use client"
 
 export default function UI({ addHobby }) {
